put appsetings.json in gitignore to we could ignore secrets keys from hosting

--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,6 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+
+# to ignore appsettings.json from hosting on github
+appsettings.json
